AC_INIT([pargen], [0.1])

PKG_CHECK_MODULES(THIS, [mycpp-1.0, mylang-1.0, libmary-1.0])
AC_SUBST(THIS_CFLAGS)
AC_SUBST(THIS_LIBS)

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_CXX
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
#LT_INIT(win32-dll)

AC_CONFIG_FILES([Makefile
		 pargen/Makefile
		 pargen-1.0.pc])
AC_OUTPUT

